--- a/style/fogliostile.css
+++ b/style/fogliostile.css
@@ -300,6 +300,10 @@ h5 {
   margin-right:20px;
 }
 
+.col-md-3 {
+  background-color:#eee
+}
+
 /* Style the buttons */
 #sortBtnContainer .btn {
   text-align:center;
@@ -374,6 +378,10 @@ h5 {
   border-bottom-right-radius: 5px; 
   display:flex; 
   flex-direction:column
+}
+
+.col-container .col-md-3 {
+  background-color: white;
 }
 
 .card-body .btn-custom {
